# ai-vendor-specs

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  manifest.json  package-lock.json  package.json
.github/workflows/: pages.yml  publish-npm.yml  publish-pypi.yml  sync-daily.yml
alibaba/qwen/: metadata.json  openapi.yml
anthropic/bedrock/: metadata.json  openapi.yml
anthropic/official/: metadata.json  openapi.yml
baidu/ernie/: metadata.json  openapi.yml
cohere/official/: metadata.json
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  INTEGRATION-WITH-ONE-API.md  ONE-API-ARCHITECTURE.md  PLAYGROUND-INTEGRATION.md  SOURCES.md  SOURCES.zh-CN.md  TESTING-INTEGRATION.md  USAGE.md  USAGE.zh-CN.md
gemini/official/: discovery.json  metadata.json
openai/azure/: metadata.json
openai/official/: metadata.json
python/: .gitignore  prepare-pypi.sh  pyproject.toml
python/ai_vendor_specs/: __init__.py
scripts/: build-manifest.js  build-site.js  check-drift.js  detect-release.js  notify.js  report-changes.js  sync-all.sh  utils.sh  validate-all.sh
scripts/configs/: alibaba-qwen.json  baidu-ernie.json
scripts/convert/: discovery-to-openapi.js  docs-to-openapi.js
scripts/overlay/: apply.js
scripts/sync/: alibaba-qwen.sh  anthropic-bedrock.sh  anthropic-official.sh  baidu-ernie.sh  cerebras.sh  cohere-official.sh  deepinfra.sh  flux-official.sh  gemini-official.sh  google-gemini.sh  google-vertex.sh  ideogram-official.sh  jina-official.sh  mistral-official.sh  moonshot.sh  openai-azure-preview.sh  openai-azure.sh  openai-official.sh  perplexity-official.sh  siliconflow.sh  vertex-official.sh  zhipu-official.sh
upstream/anthropic/bedrock/: metadata.json  overlay.yml
upstream/anthropic/official/: metadata.json  openapi.yml
upstream/cohere/official/: metadata.json
upstream/flux/official/: metadata.json  openapi.json
vertex/official/: metadata.json
(+55 files in other folders)
