[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-vendor-specs"
version = "0.1.0"
description = "Curated official OpenAPI / Discovery specifications for major AI providers, with overlay support for OpenAI-compatible vendors and daily upstream sync with drift detection."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AIhubmix" }]
keywords = [
    "ai",
    "openai",
    "anthropic",
    "claude",
    "gemini",
    "cohere",
    "vertex",
    "azure",
    "bedrock",
    "xai",
    "grok",
    "openapi",
    "openapi-3",
    "discovery",
    "api-specs",
    "llm",
    "ai-gateway",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/AIhubmix/ai-vendor-specs"
Repository = "https://github.com/AIhubmix/ai-vendor-specs.git"
Issues = "https://github.com/AIhubmix/ai-vendor-specs/issues"
Documentation = "https://github.com/AIhubmix/ai-vendor-specs#readme"

[tool.hatch.build]
# Don't consult .gitignore — _data/ is generated by prepare-pypi.sh
# and intentionally gitignored, but we DO want it inside the wheel/sdist.
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["ai_vendor_specs"]

[tool.hatch.build.targets.sdist]
include = [
    "ai_vendor_specs",
    "README.md",
    "LICENSE",
    "prepare-pypi.sh",
    "pyproject.toml",
]
